<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:background="?attr/cardBackgroundColor"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingHorizontal="20dp"
        android:paddingVertical="16dp"
        android:layout_marginBottom="14dp"
        android:background="?attr/cardBackgroundColor">

        <ImageView
            android:id="@+id/iconFavorite"
            android:layout_width="26dp"
            android:layout_height="26dp"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/baseline_favorite_24"
            android:contentDescription="@string/icon"/>

        <TextView
            android:id="@+id/favoriteTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@id/iconFavorite"
            android:text="@string/my_favorites"
            android:textColor="?attr/colorOnPrimary"
            android:textSize="18sp"/>

        <TextView
            android:id="@+id/clearAllFavoritesButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:textColor="?attr/colorPrimary"
            android:shadowColor="@color/wine_red"
            android:shadowDx="2"
            android:shadowDy="2"
            android:shadowRadius="2"
            android:text="@string/clear_all" />

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/favoriteRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="10dp"/>

</LinearLayout>
