<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment">

    <View
        android:id="@+id/statusBarHeight"
        android:layout_width="0dp"
        android:layout_height="30dp"/>

    <!-- Start Section Toolbar -->
    <Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/statusBarHeight"
        android:elevation="4dp"
        android:paddingBottom="10dp">

        <ImageView
            android:id="@+id/logoImageView"
            android:layout_width="60dp"
            android:layout_height="30dp"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo"
            android:layout_marginEnd="14dp" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp"
            android:fontFamily="@font/audiowide"
            android:shadowColor="@color/wine_red"
            android:shadowDx="4"
            android:shadowDy="4"
            android:shadowRadius="2"
            android:layout_marginEnd="16dp" />

    </Toolbar>
    <!-- End Section Toolbar -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:background="?attr/colorPrimaryContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:ignore="ScrollViewSize"
            android:paddingHorizontal="20dp">

            <!-- Start Section Search -->
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="50dp">

                <SearchView
                    android:id="@+id/searchView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="?attr/cardBackgroundColor"
                    android:queryHint="Search..."
                    android:iconifiedByDefault="false"
                    android:imeOptions="actionSearch"/>

            </androidx.cardview.widget.CardView>
            <!-- End Section Search -->

            <!-- Start Section Trending -->
            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/trendingViewPager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="46dp"
                android:layout_marginBottom="10dp"/>
            <!-- End Section Trending -->

            <!-- Start Section Most Popular -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/baseline_fire_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/most_popular"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/popularRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"/>
            <!-- End Section Most Popular -->

            <!-- Start Section Now Playing -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/baseline_time_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/now_playing"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/nowPlayingRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"/>
            <!-- End Section Now Playing -->

            <!-- Start Section Top Rated -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/baseline_emoji_events_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/top_rated"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/topRatedRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"/>
            <!-- End Section Top Rated -->

            <!-- Start Section Upcoming -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginEnd="6dp"
                    android:contentDescription="@string/icon"
                    android:src="@drawable/baseline_event_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/upcoming"
                    android:textColor="?attr/colorOnPrimary"
                    android:textSize="18sp" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/upcomingRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"/>
            <!-- End Section Upcoming -->

        </LinearLayout>

    </ScrollView>

</RelativeLayout>
